# Pet_Blog

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 022cd9f64d8e_added_articleschema.py  109121adf0af_extended_email_check_contrain.py  21b059b41c65_added_corrected_constrains_for_.py  275e8c8b2d9e_added_relationships_between_articles_.py  37a9c6bfe43b_added_contrains_to_users_and_articles_.py  69b003b23a95_added_articles_model.py  6c1bdd370059_init_revision.py  746728b33937_init_revision.py  89ab6c87e681_added_userschema.py  8bce9878e95c_added_new_userschema_model.py  a1f7db91fb26_added_articleschema.py  cf5f11a681ce_init_revision.py  fb232b1a37a1_added_bcrypt_for_passwords_so_changed_.py  ffa2defe7712_added_secret_info_and_release_date_.py
src/: database.py  dependencies.py  main.py  middleware.py  models.py  settings.py
src/articles/: __init__.py  models.py  schemas.py  service.py  utils.py
src/auth/: security.py  utils.py
src/blog/: __init__.py  service.py
src/pages/: __init__.py  service.py  templates.py
src/pages/errors/: exception_handlers.py
src/users/: __init__.py  models.py  schemas.py  service.py  utils.py
static/: create_post.css  create_post.js  errors.css  login.css  login.js  register.css  register.js  style.css
static/blog/: blog.css
static/create_post/: create_post.js
templates/: blog.html  create_post.html  login.html  register.html
templates/errors/: 401.html  403.html  404.html
tests/: conftest.py
tests/articles/: test_models.py  test_schemas.py  test_service.py  test_utils.py
tests/auth/: test_utils.py
tests/pages/: test_service.py
tests/pages/errors/: test_exception_handlers.py
tests/users/: test_models.py  test_schemas.py  test_service.py  test_utils.py
