[project]
name = "pet-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "authx>=1.4.3",
    "authx-extra>=1.2.0",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

python_executable = ".venv/Scripts/python.exe"
explicit_package_bases = true
